--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header id="header-main">
         <div class="head-container global-width">
             <div class="head-left">Business site</div>
-            <div class="head-right">
+            <div class="head-right ">
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Service</li>
-                    <li>Portfolio</li>
-                    <li>Team</li>
-                    <li>Career</li>
-                    <li>Contact</li>
-                    <li>FAQ</li>
+                    <li><a href="#header-main">Home</a> </li>
+                    <li><a href="#about-main">About</a> </li>
+                    <li><a href="#service-main">Service</a> </li>
+                    <li><a href="#projects-main">Projects</a> </li>
+                    <li><a href="#team-main">Team</a> </li>
+                    <li><a href="error.html">Career</a> </li>
+                    <li><a href="#contact-main">Contact</a> </li>
+                    <li><a href="#faq-main">FAQ</a> </li>
                 </ul>
             </div>
         </div>
@@ -35,15 +35,15 @@
                 </div>
             </div>
     </div>
-    <div class="about-container global-width">
+    <div class="about-container global-width" id="about-main">
         <div class="about-head">
             <h1>About Us</h1>
         </div>
         <h4>We make creativity work for your brand!</h4>
         <p>At Smart Business Solutions, we believe in innovation, technology, and creativity. Our mission is to empower businesses with digital tools, smart strategies, and reliable support to achieve success.</p>
-        <a href="https://">Read more</a>
+        <a href="error.html">Read more</a>
     </div>
-    <div class="service-background">
+    <div class="service-background" id="service-main">
         <div class="service global-width">
             <div class="service-head ">
                 <h1>Our services</h1>
@@ -92,7 +92,7 @@
             </div>
         </div>
     </div>
-    <div class="service-background">
+    <div class="service-background" id="projects-main">
         <div class="service global-width">
             <div class="service-head ">
                 <h1>Our Projects</h1>
@@ -122,7 +122,7 @@
             <div class="achive-box">
                 <h4>Have questions or ideas?</h4>
                 <p>We’re just a message away to help you get started.</p>
-                <a href="https://">Contact Now</a>
+                <a href="error.html">Contact Now</a>
             </div>
         </div>
     </div>
@@ -132,11 +132,10 @@
                 <h1>Testimonials</h1>
             </div>
             <p>See what people have to say about us</p>
-            
         </div> 
     </div>
     <div class="our-clients"></div>
-    <div class="our-team-background">
+    <div class="our-team-background" id="team-main">
         <div class="our-team global-width">
             <div class="our-team-head">
                 <h1>Our Team</h1>
@@ -205,7 +204,7 @@
             </div>
         </div> 
     </div>
-    <section class="get-in-touch-container">
+    <section class="get-in-touch-container" id="contact-main">
         <div class="about-container global-width">
             <div class="about-head">
                 <h1>get in touch</h1>
@@ -228,15 +227,106 @@
             </div>
         </div>
     </section>
-    <footer>
-        <div class="footer-container">
-            <div class="foot-sec-1">
-                <h1>ABOUT US</h1>
-                <p>Home</p>
-                <p>About us</p>
-                <p>Our services</p>
+
+<div class="faq-section">
+    <div class="faq-main global-width" id="faq-main">
+        <div class="faq-head">
+            <h1>FAQ</h1>
+        </div>
+        <div class="faq-container">
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>+</span>
+                    <p>How much will it cost to build my website?</p>
+                </div>
+            <div class="faq-answer">
+                <p>💬 The cost depends on your requirements — such as design, features, and integrations. After understanding your needs, we’ll provide you with a customized quote.</p>
             </div>
         </div>
+
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>+</span>
+                    <p>How long does it take to design and launch a website?</p>
+                </div>
+                <div class="faq-answer">
+                    <p>💬 A basic website usually takes 50-60 hours. More complex sites with custom features may take 100 or more Hours depending on revisions and content availability.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>+</span>
+                    <p>Will my website work on mobile devices?</p>
+                </div>
+                <div class="faq-answer">
+                    <p>💬 Yes! We build all our websites with a mobile-first approach, ensuring your site looks great and works smoothly on phones, tablets, and desktops.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>+</span>
+                    <p>Do you provide support after the website is live?</p>
+                </div>
+                <div class="faq-answer">
+                    <p>💬 Absolutely. We offer ongoing support, maintenance, and updates to keep your site secure and running smoothly.</p>
+                </div>
+            </div>
+    </div>    
+</div>
+</div>
+    <footer>
+        <div class="footer-container">
+            <div class="foot global-width">
+                <div class="foot-sec-1 flex-box">
+                    <h1>ABOUT US</h1>
+                    <p> <a href="#header-main">&#8594; Home</a></p> 
+                    <p> &#8594; About us</p>
+                    <p> &#8594; Our services</p>
+                    <p> &#8594; Terms & condition</p>
+                    <p> &#8594; Privacy policy</p>
+                </div>
+                <div class="foot-sec-2 flex-box">
+                    <h1>Useful Links</h1>
+                    <p> &#8594; Portfolio</p>
+                    <p> &#8594; Team</p>
+                    <p> &#8594; Career</p>
+                    <p> &#8594; Contact</p>
+                    <p> &#8594; FAQ</p>
+                </div>
+                <div class="foot-sec-3 flex-box">
+                    <h1>Contact Us</h1>
+                    <h6>1300 Center Avenue<br>
+                        Fresno, California<br>
+                        United States<br>
+                        <h6>Phone:<a href="error.html">+123-456-7890</a></h6>  
+                    </h6>
+                    <section>
+                        <div class="contact-page ">                  
+                            <a href="error.html"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="20px" width="20px" xmlns="https://www.w3.org/2000/svg"><path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path></svg></a>
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="20px" width="20px" xmlns="https://www.w3.org/2000/svg"><g id="Twitter"><path d="M19.913,5.322a1.034,1.034,0,0,1,.837,1.629L19.708,8.432c-.064,5.086-1.765,8.539-5.056,10.264A10.917,10.917,0,0,1,9.6,19.835a12.233,12.233,0,0,1-6.2-1.524.76.76,0,0,1-.317-.8.768.768,0,0,1,.63-.6,20.6,20.6,0,0,0,3.745-.886C2,13.5,3.19,7.824,3.71,6.081a1.028,1.028,0,0,1,1.729-.422,9.931,9.931,0,0,0,5.995,2.95A4.188,4.188,0,0,1,12.725,5.3a4.125,4.125,0,0,1,5.7.02ZM4.521,17.794c1.862.872,6.226,1.819,9.667.016,2.955-1.549,4.476-4.732,4.521-9.461a.771.771,0,0,1,.142-.436l1.081-1.538-.041-.053c-.518-.007-1.029-.014-1.55,0a.835.835,0,0,1-.547-.221,3.13,3.13,0,0,0-4.383-.072,3.174,3.174,0,0,0-.935,2.87.646.646,0,0,1-.154.545.591.591,0,0,1-.516.205A10.924,10.924,0,0,1,4.722,6.354c-.67,2.078-1.52,7.094,3.869,9.065a.632.632,0,0,1,.416.538.625.625,0,0,1-.3.6A13.178,13.178,0,0,1,4.521,17.794ZM11.875,8.65h0Zm7.793-.161,0,0Z"></path></g></svg>
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="20px" width="20px" xmlns="https://www.w3.org/2000/svg"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg>
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="20px" width="20px" xmlns="https://www.w3.org/2000/svg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 640 512" height="20px" width="20px" xmlns="https://www.w3.org/2000/svg"><path d="M386.061 228.496c1.834 9.692 3.143 19.384 3.143 31.956C389.204 370.205 315.599 448 204.8 448c-106.084 0-192-85.915-192-192s85.916-192 192-192c51.864 0 95.083 18.859 128.611 50.292l-52.126 50.03c-14.145-13.621-39.028-29.599-76.485-29.599-65.484 0-118.92 54.221-118.92 121.277 0 67.056 53.436 121.277 118.92 121.277 75.961 0 104.513-54.745 108.965-82.773H204.8v-66.009h181.261zm185.406 6.437V179.2h-56.001v55.733h-55.733v56.001h55.733v55.733h56.001v-55.733H627.2v-56.001h-55.733z"></path></svg>                       
+                        </div>
+                    </section>
+                </div>
+                <div class="foot-sec-4 flex-box">
+                    <h1>Subscription</h1>
+                    <h6> With Our Skills Put Together, You Get An Ensemble Capable Of Doing Anything And Everything Your Brand Needs. Subscribe Here To Get Our Latest Updates.</h6>         
+                    <div class="subscribe-box">
+                        <input type="text" required>
+                        <h4><a href="error.html">Subscribe</a></h4> 
+                    </div>
+                </div>
+            </div>
     </footer>
+    <div class="bottom">
+        <h4 class="global-width">"© 2025 Your Company Name — Bringing Your Business Online with Confidence."</h4>
+    </div>
+    <!-- Back to Top Button -->
+    <a href="#header-main" class="back-to-top">↑</a>
+    <script src="script.js"></script>
 </body>
 </html>
