--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header id="header-main">
         <div class="head-container global-width">
             <div class="head-left">Business site</div>
-            <div class="head-right ">
+            <div class="head-right">
+                <div class="pc-menu">
                 <ul>
                     <li><a href="#header-main">Home</a> </li>
                     <li><a href="#about-main">About</a> </li>
@@ -21,14 +22,30 @@
                     <li><a href="#contact-main">Contact</a> </li>
                     <li><a href="#faq-main">FAQ</a> </li>
                 </ul>
+                </div>
+
+                <div class="phone-menu">
+                    <h1>&#9776;</h1>
+                <ul>
+                    <span class="close-btn">&times;</span>
+                    <li><a href="#header-main">Home</a> </li>
+                    <li><a href="#about-main">About</a> </li>
+                    <li><a href="#service-main">Service</a> </li>
+                    <li><a href="#projects-main">Projects</a> </li>
+                    <li><a href="#team-main">Team</a> </li>
+                    <li><a href="error.html">Career</a> </li>
+                    <li><a href="#contact-main">Contact</a> </li>
+                    <li><a href="#faq-main">FAQ</a> </li>
+                </ul>
+                </div>
             </div>
         </div>
     </header>
     <div class="hero-container">
             <div class="hero-background">
                 <div class="hero">
-                    <h1>Smart Business Solutions</h1>
-                    <p>Make Your Business</p>
+                    <h1 class="text-[3rem] md:text-[4rem] lg:text-[5rem]">Smart Business Solutions</h1>
+                    <p class="text-[1.5rem] md:text-[2rem] lg:text-[2.5rem]">Make Your Business</p>
                     <div class="wave wave1"></div>
                     <div class="wave wave2"></div>
                     <div class="wave wave3"></div>
@@ -327,6 +344,7 @@
     </div>
     <!-- Back to Top Button -->
     <a href="#header-main" class="back-to-top">↑</a>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="script.js"></script>
 </body>
 </html>
